// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useBulkSelect returns a bulk select configuration 1`] = `
{
  "current": {
    "selectNone": [Function],
    "selectedIds": undefined,
    "tableProps": {
      "canSelectAll": false,
      "onSelect": undefined,
    },
    "toolbarProps": {
      "bulkSelect": {
        "checked": false,
        "count": 0,
        "isDisabled": true,
        "items": [
          {
            "onClick": [Function],
            "props": {
              "isDisabled": true,
            },
            "title": "Select none",
          },
          {
            "onClick": [Function],
            "title": "Select page (0 items)",
          },
          {
            "onClick": [Function],
            "title": "Unselect all (0 items)",
          },
        ],
        "onSelect": [Function],
        "toggleProps": null,
      },
    },
  },
}
`;

exports[`useBulkSelect returns a bulk select configuration with the correct options 1`] = `
{
  "selectNone": [Function],
  "selectedIds": [
    "ID",
  ],
  "tableProps": {
    "canSelectAll": false,
    "onSelect": [Function],
  },
  "toolbarProps": {
    "bulkSelect": {
      "checked": null,
      "count": 1,
      "isDisabled": false,
      "items": [
        {
          "onClick": [Function],
          "props": {
            "isDisabled": false,
          },
          "title": "Select none",
        },
        {
          "onClick": [Function],
          "title": "Select page (2 items)",
        },
        {
          "onClick": [Function],
          "title": "Select all (2 items)",
        },
      ],
      "onSelect": [Function],
      "toggleProps": null,
    },
  },
}
`;

exports[`useBulkSelect returns a bulk select configuration with the correct options 2`] = `
{
  "selectNone": [Function],
  "selectedIds": [
    "ID",
  ],
  "tableProps": {
    "canSelectAll": false,
    "onSelect": [Function],
  },
  "toolbarProps": {
    "bulkSelect": {
      "checked": null,
      "count": 1,
      "isDisabled": false,
      "items": [
        {
          "onClick": [Function],
          "props": {
            "isDisabled": false,
          },
          "title": "Select none",
        },
        {
          "onClick": [Function],
          "title": "Select page (2 items)",
        },
        {
          "onClick": [Function],
          "title": "Select all (2 items)",
        },
      ],
      "onSelect": [Function],
      "toggleProps": null,
    },
  },
}
`;

exports[`useBulkSelect returns a bulk select configuration with the correct options 3`] = `
{
  "selectNone": [Function],
  "selectedIds": [
    "ID",
  ],
  "tableProps": {
    "canSelectAll": false,
    "onSelect": [Function],
  },
  "toolbarProps": {
    "bulkSelect": {
      "checked": null,
      "count": 1,
      "isDisabled": false,
      "items": [
        {
          "onClick": [Function],
          "props": {
            "isDisabled": false,
          },
          "title": "Select none",
        },
        {
          "onClick": [Function],
          "title": "Select page (1 items)",
        },
        {
          "onClick": [Function],
          "title": "Select all (2 items)",
        },
      ],
      "onSelect": [Function],
      "toggleProps": null,
    },
  },
}
`;

exports[`useBulkSelect returns a spinner on loading 1`] = `
{
  "selectNone": [Function],
  "selectedIds": undefined,
  "tableProps": {
    "canSelectAll": false,
    "onSelect": [Function],
  },
  "toolbarProps": {
    "bulkSelect": {
      "checked": false,
      "count": 0,
      "isDisabled": true,
      "items": [
        {
          "onClick": [Function],
          "props": {
            "isDisabled": true,
          },
          "title": "Select none",
        },
        {
          "onClick": [Function],
          "title": "Select page (1 items)",
        },
        {
          "onClick": [Function],
          "title": "Select all (2 items)",
        },
      ],
      "onSelect": [Function],
      "toggleProps": {
        "children": [
          <React.Fragment>
            <Spinner
              size="sm"
            />
                 0 selected
          </React.Fragment>,
        ],
      },
    },
  },
}
`;
